<resources>
  <string name="app_name">淘贝</string>
  <string name="btn_lead_enter">点击进入</string>
  <string name="list_empty_default">没有数据加载</string>
  <string name="unit_cash">元</string>
  <string name="unit_bbj">枚</string>
  <string name="unit_adv_view_count">条</string>
  <string name="unit_times">次</string>
  <string name="format_duration">%1$d时%2$d分</string>
  <string name="refresh_load_more">加载更多</string>
  <string name="unit_day">日</string>
  <string name="unit_currency_graph">(元)</string>
  <string name="time_format_minute">%d分钟前</string>
  <string name="time_format_hour">%d小时前</string>
  <string name="time_format_just">刚刚</string>
  <string name="session_expired">Session过期,请重新登录</string>
  <string name="gender_male">男</string>
  <string name="gender_female">女</string>
  <string name="btn_confirm">确定</string>
  <string name="btn_cancel">取消</string>
  <string name="network_not_normal">网络不给力</string>
  <string name="http_server_error">无法连接到服务器,请稍后再试</string>
  <string name="server_error">服务器错误</string>
  <string name="default_user_name">游客</string>
  <string name="adv_item_type_pic">#图片</string>
  <string name="adv_item_type_video">#视频</string>
  <string name="adv_item_type_h5">#微场景广告</string>
  <string name="adv_item_profit_real">即赚%s元</string>
  <string name="adv_item_profit_virtual">即赚%s贝贝金</string>
  <string name="adv_item_profit_coupon">即赚优惠券</string>
  <string name="adv_not_launch_info">剧透啦,剧透啦,剧透啦!重要的事说三遍。每天几分钟,赚钱不耽误,你可以在设置中开启或关闭广告
  预告提醒,在广告开始投放之前,我们将会提前给你推送通知。</string>
  <string name="adv_not_launch_info_setting_text">预告广告正式投放提醒设置</string>
  <string name="adv_item_un_launch_info">预计在%1$s投放,预计可赚%2$s元,敬请观看</string>
  <string name="adv_item_un_launch_info_coupon">预计在%1$s投放,预计可获得优惠券,敬请观看</string>
  <string name="activity_advertisement_detail_title">观看广告</string>
  <string name="adv_detail_input_info_text">写评论</string>
  <string name="adv_detail_play_number_info">剩余%1$d场次,总投放%2$d场次</string>
  <string name="adv_detail_play_time_info">剩余%1$s,总投放%2$s</string>
  <string name="adv_detail_profit_info_real">即赚%s元</string>
  <string name="adv_detail_profit_info_virtual">即赚%s贝贝金</string>
  <string name="adv_detail_info_apologize_title">非常抱歉!</string>
  <string name="adv_detail_info_apologize_info">您错失先机,未能抢先观看,无法获得现金红包。</string>
  <string name="adv_detail_info_apologize_info_profit">但是,现在继续看广告,能获得%s枚贝贝金。</string>
  <string name="adv_detail_info_play_continue">继续播放</string>
  <string name="adv_detail_status_profit_real_un_get">领取</string>
  <string name="adv_detail_status_profit_real_get">%d元</string>
  <string name="adv_detail_status_profit_virtual_un_get">领取</string>
  <string name="adv_detail_status_profit_virtual_get">%d枚</string>
  <string name="adv_detail_info_share">分享广告，让你的朋友们也赚钱</string>
  <string name="adv_detail_btn_share_moments">朋友圈</string>
  <string name="adv_detail_btn_share_friends">微信</string>
  <string name="adv_detail_rule_title">规则说明</string>
  <string name="adv_detail_activity_title">活动</string>
  <string name="adv_detail_rule">观看广告视频后,即可获得%s元随机抽取现金红包。\n广告投放期内,首次抢先观看获得
  现金红包,其后每次观看可获得贝贝金。\n将广告分享给朋友,可以获得100贝贝金。</string>
  <string name="adv_detail_comment_list_title">热门评论</string>
  <string name="adv_detail_comment_list_order_time">时间</string>
  <string name="adv_detail_comment_list_order_hot">热度</string>
  <string name="adv_detail_btn_send">发送</string>
  <string name="adv_detail_comments_load_more">查看更多评论</string>
  <string name="adv_detail_profit_info_congratulations_real">恭喜你赚得%d元现金红包</string>
  <string name="adv_detail_profit_info_congratulations_virtual">恭喜你赚得%d枚贝贝金</string>
  <string name="adv_detail_profit_info_congratulations_coupon">恭喜你赚得优惠券奖励</string>
  <string name="adv_detail_profit_info_label_wallet">已存入你的卡券</string>
  <string name="adv_detail_profit_info_btn_wallet">我的钱包</string>
  <string name="adv_detail_profit_info_btn_coupon">我的优惠券</string>
  <string name="adv_detail_profit_info_btn_question_virtual_money">答题得贝贝金</string>
  <string name="adv_detail_profit_info_btn_withdraw">提现</string>
  <string name="adv_detail_profit_info_btn_my_profit">我的收益</string>
  <string name="adv_detail_dialog_congratulations">恭喜您!\u0020%s</string>
  <string name="adv_detail_dialog_cash_award">本次赚得贝贝金</string>
  <string name="adv_detail_dialog_bbj_award">本次赚得现金奖励</string>
  <string name="adv_detail_dialog_coupon_award">本次赚得优惠券奖励</string>
  <string name="adv_detail_dialog_share_label">分享广告,让你的朋友们也赚钱</string>
  <string name="adv_detail_dialog_info_recommend_un_login">强烈建议你在15分钟内通过微信、QQ、微博登陆后提现，也
  可以使用手机号码注册成为会员，观看更多的广告，获得更多的现金红包奖励</string>
  <string name="adv_detail_dialog_info_un_login_warn">超过十五分钟注册或登录不能获得现金红包。</string>
  <string name="adv_detail_dialog_info_recommend_un_login_bbj">强烈建议你在15分钟内通过微信、QQ、微博登陆后提现，也
  可以使用手机号码注册成为会员，观看更多的广告，获得更多的贝贝金奖励</string>
  <string name="adv_detail_dialog_info_un_login_warn_bbj">超过十五分钟注册或登录不能获得贝贝金。</string>
  <string name="adv_detail_toast_info_state_changed">您的状态已发生改变,状态同步完成后,请再次点击</string>
  <string name="comment_list_empty_default">还没有评论，快来发表评论吧</string>
  <string name="adv_play_count_down">还剩下 %d 秒</string>
  <string name="adv_play_warn_not_wifi">您当前正在使用移动网络,继续播放将消耗流量</string>
  <string name="drawer_name_un_login">登录</string>
  <string name="drawer_total_profit_login">你已从观看广告中\n赚得%d元现金红包</string>
  <string name="drawer_total_profit_withdraw">提现</string>
  <string name="drawer_total_profit_un_login">你还没有开始赚钱?\n还等什么赶紧看广告!</string>
  <string name="drawer_profit">今天收益%d元</string>
  <string name="drawer_sign_in_award">登录签到奖励</string>
  <string name="drawer_btn_task">任务</string>
  <string name="drawer_btn_share">分享</string>
  <string name="drawer_btn_attention">关注</string>
  <string name="drawer_btn_collection">收藏</string>
  <string name="drawer_btn_search">搜索</string>
  <string name="drawer_btn_setting">设置</string>
  <string name="drawer_btn_feed_back">反馈</string>
  <string name="login_sub_title_first">看好看的广告</string>
  <string name="login_sub_title_second">领能提现的钱</string>
  <string name="login_phone_input_hint">手机号码</string>
  <string name="login_password_input_hint">登录密码</string>
  <string name="login_verify_code_input_hint">获取验证码</string>
  <string name="btn_login">登\u0020录</string>
  <string name="btn_login_with_verify_code">使用验证码登录</string>
  <string name="btn_login_with_password">使用密码登录</string>
  <string name="btn_forget_password">忘记密码</string>
  <string name="btn_register_prefix">您还没有账号?点这里</string>
  <string name="btn_register">快速注册</string>
  <string name="btn_get_verify_code_count_down_default">获\u0020取</string>
  <string name="login_way_sub_title">会员登录</string>
  <string name="login_way_web_chat">微信</string>
  <string name="login_way_phone">手机</string>
  <string name="login_way_qq">QQ</string>
  <string name="login_way_other_register">会员注册</string>
  <string name="login_way_other_sina">微博</string>
  <string name="login_way_other">或许还可以选择其它方式</string>
  <string name="login_error">用户名或者密码错误</string>
  <string name="login_input_phone_error">请输入有效的手机号码</string>
  <string name="login_input_password_error">密码输入有误</string>
  <string name="register_phone_input_hint">常用手机号码</string>
  <string name="register_verify_code_input_hint">请填写手机收到的验证码</string>
  <string name="register_verify_code_label">验证码</string>
  <string name="register_btn_get_verify_code">获\u0020取</string>
  <string name="register_btn">注册</string>
  <string name="register_licence_info">点击上面的"注册"按钮,即表示您同意《淘贝软件许可及服务协议》</string>
  <string name="register_phone_invalid">请输入合法手机号</string>
  <string name="password_label">密码</string>
  <string name="password_confirm_label">确认密码</string>
  <string name="password_input_hint">输入由6~12位数字、字母或组合的密码</string>
  <string name="password_confirm_input_hint">确认密码须与原密码保持一致</string>
  <string name="btn_password_confirm">确定</string>
  <string name="btn_password_old">旧密码</string>
  <string name="btn_password_old_hint">输入当前登录密码</string>
  <string name="btn_password_new">新密码</string>
  <string name="btn_password_new_confirm">确认新密码</string>
  <string name="activity_profile_initialize_btn_over_look">跳过</string>
  <string name="activity_profile_initialize_btn_next">下一步</string>
  <string name="fragment_gender_choose_title">您的性别</string>
  <string name="fragment_birthday_choose_title">您的出生日期</string>
  <string name="fragment_professional_choose_title">您的职业</string>
  <string name="fragment_profile_title">个人中心</string>
  <string name="fragment_profile_btn_register">注\u0020册</string>
  <string name="fragment_profile_btn_login">登\u0020录</string>
  <string name="fragment_profile_btn_profit">收益</string>
  <string name="fragment_profile_btn_account">账户</string>
  <string name="fragment_profile_btn_virtual_money">贝贝金</string>
  <string name="fragment_profile_no_profit">暂无收益</string>
  <string name="fragment_profile_has_profit">今日已赚￥%s</string>
  <string name="fragment_profile_account_value">￥%s</string>
  <string name="fragment_profile_virtual_money_value">已收获%d枚</string>
  <string name="fragment_profile_menu_message_center">消息中心</string>
  <string name="fragment_profile_menu_member_honour">会员荣誉</string>
  <string name="fragment_profile_menu_member_achievement">会员成就</string>
  <string name="fragment_profile_menu_watched">我看过的</string>
  <string name="fragment_profile_menu_comments">我的评论</string>
  <string name="fragment_profile_menu_friend_invite">邀请朋友</string>
  <string name="fragment_profile_btn_coupon">我的卡券</string>
  <string name="fragment_profile_btn_dream">心愿单</string>
  <string name="fragment_profit_title">哔哔</string>
  <string name="fragment_profit_view_count">看了%d条广告</string>
  <string name="fragment_profit_label_view_time">使用闲时</string>
  <string name="fragment_profit_friend_rank">友圈哔格第%d</string>
  <string name="fragment_profit_label_be_visited">累计被浏览</string>
  <string name="fragment_profit_be_visited_count">%d次</string>
  <string name="fragment_profit_profit_label_today">今天赚</string>
  <string name="fragment_profit_beyond">超越%s的会员,</string>
  <string name="fragment_profit_description_beyond">你就是明日那璀璨之星</string>
  <string name="fragment_profit_cheered">立即加油</string>
  <string name="fragment_profit_bar_format">%d元</string>
  <string name="fragment_profit_bottom_info">今天的"哔"格满满,明天才能盆满钵满</string>
  <string name="fragment_profit_btn_share_moments">哔哔到微信朋友圈</string>
  <string name="activity_adv_question_list_title">观看广告</string>
  <string name="activity_adv_question_btn_commit">提交领红包</string>
  <string name="activity_adv_question_label">回答以下问题,完成后领取红包。感谢你的支持!</string>
  <string name="activity_adv_toast_submit_failure">问题提交失败,请稍后再试</string>
  <string name="activity_report_title">贝贝报告</string>
  <string name="activity_report_label_first">累计看广告</string>
  <string name="activity_report_label_second">累计已赚钱</string>
  <string name="activity_report_label_third">累计时长</string>
  <string name="activity_report_total_view_duration">%1$d小时%2$d分</string>
  <string name="activity_report_desc_make_money">赚钱绝不手软</string>
  <string name="activity_report_desc_make_money_more">怎样才能赚更多的钱?</string>
  <string name="activity_report_label_today_expected">今日预计:</string>
  <string name="activity_report_medal_title">勋章</string>
  <string name="activity_report_medal_all">全部勋章</string>
  <string name="activity_report_title_question">淘贝·赚更多?给我回报吧!</string>
  <string name="my_account_name">姓名</string>
  <string name="my_account_edit_name">请输入姓名</string>
  <string name="my_account_card">请输入卡号</string>
  <string name="my_account_num">账号</string>
  <string name="my_account_bank">银行</string>
  <string name="my_account_choose_bank">请选择银行</string>
  <string name="my_account_add_card">添加银行卡</string>
  <string name="my_account_my_balance">—— 我的余额 ——</string>
  <string name="my_account_out_mn">可提现收益</string>
  <string name="my_account_out_question">常见问题</string>
  <string name="my_account_out_1">现只支持提现到银行卡，首次提现不限金额；</string>
  <string name="my_account_out_2">其后每次提现为50元整。</string>
  <string name="my_account_out_3">提现采用手工转账，提现申请后三个工作日内到账，</string>
  <string name="my_account_out_4">到账时间由银行的处理时间决定</string>
  <string name="my_account_out">申请提现</string>
</resources>