<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/bg_dialog_profit_get"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="14.5dp"
    android:paddingTop="16.5dp"
    >
  <ImageView
      android:id="@+id/btn_close"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@mipmap/btn_dialog_profit_close"
      />

  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/user_avatar"
      android:layout_width="57dp"
      android:layout_height="57dp"
      android:layout_gravity="center_horizontal"
      app:civ_border_color="#d1d1d1"
      app:civ_border_width="1dp"
      tools:src="@mipmap/src_avatar_default_drawer"
      />

  <TextView
      android:id="@+id/dialog_congratulations"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="8dp"
      tools:text="@string/adv_detail_dialog_congratulations"
      style="@style/Widget.App.TextView.Large.Primary"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="37dp"
      android:text="@string/adv_detail_dialog_coupon_award"
      style="@style/Widget.App.TextView.Medium.Primary"
      />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="12dp"
      android:background="@mipmap/bg_dialog_profit_coupon"
      android:gravity="center_horizontal|bottom"
      android:orientation="horizontal"
      >
    <TextView
        android:id="@+id/profit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/font_color_brown"
        android:textSize="30sp"
        tools:text="10"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="26dp"
        android:text="@string/unit_cash"
        android:textColor="@color/font_color_brown"
        android:textSize="18sp"
        />
  </LinearLayout>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="34dp"
      android:text="@string/adv_detail_dialog_share_label"
      style="@style/Widget.App.TextView.Medium.Primary"
      />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="16dp"
      android:orientation="horizontal"
      >
    <TextView
        android:id="@+id/btn_share_moments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="17dp"
        android:background="@drawable/bg_share_moments"
        android:drawableLeft="@mipmap/icon_share_moments"
        android:drawablePadding="6dp"
        android:gravity="center"
        android:text="@string/adv_detail_btn_share_moments"
        />

    <TextView
        android:id="@+id/btn_share_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_share_friends"
        android:drawableLeft="@mipmap/icon_share_friends"
        android:drawablePadding="6dp"
        android:gravity="center"
        android:text="@string/adv_detail_btn_share_friends"
        />

  </LinearLayout>

</LinearLayout>